# serializer version: 1
# name: test_entities[switch.jvc_projector_e_shift-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.jvc_projector_e_shift',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'E-Shift',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'E-Shift',
    'platform': 'jvc_projector',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eshift',
    'unique_id': 'e0:da:dc:0a:12:34_eshift',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.jvc_projector_e_shift-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'JVC Projector E-Shift',
    }),
    'context': <ANY>,
    'entity_id': 'switch.jvc_projector_e_shift',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch.jvc_projector_low_latency_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.jvc_projector_low_latency_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Low latency mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Low latency mode',
    'platform': 'jvc_projector',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'low_latency_mode',
    'unique_id': 'e0:da:dc:0a:12:34_low_latency_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.jvc_projector_low_latency_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'JVC Projector Low latency mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.jvc_projector_low_latency_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
